<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/ActivityPadding"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:contentDescription="@string/find_nearby"
			android:paddingTop="16dp"
			android:src="@drawable/perm_group_location_black_large" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="32dp"
			android:paddingLeft="32dp"
			android:paddingRight="32dp"
			android:paddingTop="8dp"
			android:text="@string/find_nearby_introduction"
			android:textSize="@dimen/font_size_normal" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="16dp"
			android:paddingLeft="32dp"
			android:paddingRight="32dp"
			android:text="@string/find_nearby_introduction2"
			android:textSize="@dimen/font_size_normal" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="16dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp" >

			<ImageView
				android:id="@+id/iv_user_photo"
				style="@style/ContactPhoto"
				android:contentDescription="@string/contact_photo" />

			<EditText
				android:id="@+id/et_user_name"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:inputType="textPersonName"
				android:paddingLeft="@dimen/contact_photo_additional_padding"
				android:textSize="@dimen/font_size_normal" />
		</LinearLayout>

		<Button
			android:id="@+id/b_start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/start_search"
			android:textSize="@dimen/font_size_large" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingTop="16dp" >

			<CheckBox
				android:id="@+id/cb_via_bluetooth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:paddingRight="16dp"
				android:text="@string/search_via_bluetooth"
				android:textSize="@dimen/font_size_normal" />

			<CheckBox
				android:id="@+id/cb_via_server"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="-8dp"
				android:checked="true"
				android:paddingRight="16dp"
				android:text="@string/search_via_hive_server"
				android:textSize="@dimen/font_size_normal" />
		</LinearLayout>

		<TextView
			android:id="@+id/tv_permission_pack"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingLeft="32dp"
			android:paddingRight="32dp"
			android:paddingTop="16dp"
			android:textSize="@dimen/font_size_normal"
			android:visibility="gone" />
	</LinearLayout>

</ScrollView>