<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal" >

	<ImageView
		android:id="@+id/iv_contact_photo"
		style="@style/ContactPhoto"
		android:contentDescription="@string/contact_photo" />

	<TextView
		android:id="@+id/tv_contact_name"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:clickable="true"
		android:gravity="center_vertical"
		android:paddingLeft="@dimen/contact_photo_additional_padding"
		android:textSize="@dimen/font_size_normal" />

	<!--
         Note: ImageButtons are aligned by using extra margin.
		 Should be removed/updated in case icons are changed.
	-->

	<ImageButton
		android:id="@+id/ib_contact_send_money"
		style="@style/NormalButton"
		android:contentDescription="@string/send_money"
		android:src="@drawable/icon_send_money" />

	<ImageButton
		android:id="@+id/ib_contact_add"
		style="@style/NormalButton"
		android:layout_marginTop="4dp"
		android:contentDescription="@string/add_contact"
		android:src="@drawable/ic_menu_invite_black" />

</LinearLayout>